[gd_scene load_steps=10 format=3 uid="uid://i1xqlobw8ubl"]

[ext_resource type="Script" uid="uid://biap6o23nd8g5" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bxu2ganp2ytg2" path="res://player_bar.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://530sjbv0u8p4" path="res://enemy_bar.tscn" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://ctskm6iqjh442" path="res://ball.tscn" id="4_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dt6j0o23v1htt" path="res://walls.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://x1e0kvu12ngm" path="res://player_goal.tscn" id="6_5vw27"]
[ext_resource type="PackedScene" uid="uid://8o7rj4jyo5ki" path="res://hud.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://c2vv5ubdjigu" path="res://enemy_goal.tscn" id="7_kek77"]
[ext_resource type="PackedScene" uid="uid://dd1iu5vnyhsmf" path="res://main_menu.tscn" id="9_kek77"]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
ball_scene = ExtResource("4_1bvp3")

[node name="GameBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0959682, 0.235463, 0.342687, 1)

[node name="PlayerBar" parent="." instance=ExtResource("2_h2yge")]

[node name="EnemyBar" parent="." instance=ExtResource("3_h2yge")]

[node name="Walls" parent="." instance=ExtResource("5_lquwl")]

[node name="Ball" parent="." instance=ExtResource("4_1bvp3")]

[node name="PlayerGoal" parent="." instance=ExtResource("6_5vw27")]
position = Vector2(240, 635)

[node name="EnemyGoal" parent="." instance=ExtResource("7_kek77")]
position = Vector2(240, 5)

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(240, 614)

[node name="EnemyStartPosition" type="Marker2D" parent="."]
position = Vector2(240, 11)

[node name="BallStartPosition" type="Marker2D" parent="."]
position = Vector2(240, 320)

[node name="HUD" parent="." instance=ExtResource("6_7mycd")]

[node name="MainMenu" parent="." instance=ExtResource("9_kek77")]

[connection signal="body_entered" from="PlayerGoal" to="." method="_on_player_goal_body_entered"]
